--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "jenssegers/mongodb": "^3.8",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.x"
+        "laravelcollective/html": "^6.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
